# LoggingLib

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
app/src/cli/: cli.cpp  cli.hpp
app/src/log_worker/: log_worker.cpp  log_worker.hpp
lib/: CMakeLists.txt  CmakeLists.txt
lib/include/logger/: logger.hpp
lib/include/logger/log_level/: log_level.hpp
lib/include/logger/strategies/: file_log_strategy.hpp  log_strategy.hpp  socket_log_strategy.hpp
lib/include/logger/time/: time.hpp
lib/include/logger/utils/: error_utils.hpp
lib/src/: logger.cpp
lib/src/log_level/: log_level.cpp
lib/src/strategies/: file_log_strategy.cpp  socket_log_strategy.cpp
lib/src/time/: time.cpp
lib/src/utils/: error_utils.cpp  error_utils.hpp
stats_server/: CMakeLists.txt
stats_server/src/: main.cpp
stats_server/src/cli/: cli.cpp  cli.hpp
stats_server/src/client_handler/: client_handler.cpp  client_handler.hpp  client_hendler.cpp  client_hendler.hpp
stats_server/src/client_registry/: client_registry.cpp  client_registry.hpp
stats_server/src/log_entry/: log_entry.cpp  log_entry.hpp
stats_server/src/print_stats/: print_stats.cpp  print_stats.hpp
stats_server/src/statistics/: statistics.cpp  statistics.hpp
stats_server/src/timer/: timer.cpp  timer.hpp
tests/: CMakeLists.txt
tests/app/: CMakeLists.txt  test_cli.cpp
tests/lib/: CMakeLists.txt  test_error_utils.cpp  test_log_level.cpp  test_logger.cpp  test_timestamps.cpp
tests/manual/socket_demo_client/: CMakeLists.txt  main.cpp
tests/stats_server/: CMakeLists.txt  test_cli.cpp  test_log_entry.cpp  test_print_stats.cpp  test_statistics.cpp
